# langchain-mini

./: .env_sample  .gitignore  README.md  pyproject.toml
01-Tutorial/: 01-OpenAI-LLM.ipynb  02-LCEL.ipynb  03-RAG-Basic-PDF.ipynb
